--- a/views/new.ejs
+++ b/views/new.ejs
@@ -11,7 +11,7 @@
     </header>
     <main>
         <div>
-            <div class="title form-head">
+            <div class="title form-head wcf">
                 <h2 class="card border new-title"><%= prodType %></h2>
                 <% if (prodType !== 'accessories' && prodType !== 'maker' && prodType !== 'bow') { %>    
                     <a href="/maker/new?_priorProdType=<%= prodType %>"><button type="submit" class="btn btn-secondary border new-maker">Add New Maker</button></a>
