--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
 }
 body {
-    background-image: url('/images/IMG_20170825_180318.jpg');
+    background-image: url('/images/iwN3lBU.png');
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -169,12 +169,13 @@ form {
 /* footer */
 footer {
     border-radius: 10px 10px 0 0;
-    color: lightgray;
+    color: rgb(250, 245, 245);   
     display: flex;
     position: fixed;
     bottom: 0px;
     justify-content: center;
     flex-wrap: wrap;
+    background-color: rgb(87, 96, 104);
 }
 .footer-div {
     margin: 0 5px;
@@ -235,4 +236,10 @@ footer {
     display: flex;
     flex-wrap: wrap;
     width: 100%;
+}
+.reg-title {
+    width: 140px;
+    height: 50px;
+    padding-left: 10px;
+    padding-top: 4px;
 }
