--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -1,4 +1,4 @@
-<footer class="bg-dark">
+<footer>
     <section class="about-us tony">
         <a href="mailto:xtonyyu@gmail/com" class="footer-div"><i class="fa fa-envelope-square fa-2x"></i></a>
         <a href="https://www.linkedin.com/in/xtonyyu/" class="footer-div"><i class="fa fa-linkedin fa-2x"></i></a>
