--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,13 +1,16 @@
 <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="/images/homebox3.jpg" class="d-block w-100 data-interval='5000'" alt="...">
+            <img src="/images/homebox3.jpg" class="d-block w-100 data-interval='2000'" style="vertical-align:middle" alt="...">
         </div>
         <div class="carousel-item">
-            <img src="/images/violin-wide.jpeg" class="d-block w-100 data-interval='5000'" alt="...">
+            <img src="/images/photo1.jpeg" class="d-block w-100 data-interval='2000'" style="vertical-align:middle" alt="...">
         </div>
         <div class="carousel-item">
-            <img src="/images/cello1.jpeg" class="d-block w-100 data-interval='1000'" alt="...">
+            <img src="/images/cello1.jpeg" class="d-block w-100 data-interval='2000'" style="vertical-align:middle" alt="...">
+        </div>
+        <div class="carousel-item">
+            <img src="/images/photo2.jpeg" class="d-block w-100 data-interval='2000'" style="vertical-align:middle" alt="...">
         </div>
     </div>
 </div>
