--- a/views/show.ejs
+++ b/views/show.ejs
@@ -37,7 +37,7 @@
                     </form>
                 </div>
             </div>
-            <div><img src="<%= Product.photo %> " class="show-photo border"></div>
+            <div class="show-photo border"><img src="<%= Product.photo %> " class="photo border"></div>
             <% if (Product.description) { %>
                 <div class="description card border"><%= Product.description %></div>
             <% } %>
