--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5,6 +5,7 @@ body {
     background-image: url('/images/iwN3lBU.png');
     background-size: cover;
     background-position: center;
+    background-repeat: no-repeat;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
