no repeat repeat

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -4,8 +4,9 @@
 body {
     background-image: url('/images/iwN3lBU.png');
     background-size: cover;
-    background-position: center;
+    /* background-position: center; */
     background-repeat: no-repeat;
+    background-attachment: fixed;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
