--- a/public/css/main.css
+++ b/public/css/main.css
@@ -74,6 +74,9 @@ main {
 .card-body {
     padding: 15px 15px 50px 15px;
 }
+h3.card-body {
+    padding: 10px
+}
 .card-body p {
     display: block;
     margin-bottom: 10px;
